fixed spacing for events

--- a/frontend/src/pages/EventsList/Events.css
+++ b/frontend/src/pages/EventsList/Events.css
@@ -45,7 +45,7 @@
  .event-details-column {
     display: flex;
     flex-direction: column;
-    margin-left: 10%;
+    margin-left: 5%;
  }
  
  
@@ -55,7 +55,7 @@
     border-radius: 10px;
     padding: 15px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2); /* Shadow for depth */
-    width: 82%;
+    width: 90%;
     display: flex;
     align-items: center;
     color: #fff;
@@ -69,7 +69,7 @@
     margin-right: 15px;
     color: #ffcb47; /* Optional: highlight time */
     flex-shrink: 0;
-    width: 15%;
+    width: 12%;
     text-align: right;
  }
 
